--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,10 @@
-<h1>Blackjack</h1>
+<div class="row header">
+  <div class="large-12 columns">
+    <h1>Blackjack</h1>
+  </div>
+</div>
+<div class="row cardTable">
+  <div class="large-12 columns">
+
+  </div>
+</div>
