--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -5,3 +5,18 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+h1 {
+  text-align: center;
+  padding: 1em;
+  font-weight: 700;
+}
+
+.cardTable {
+  height: 40em;
+  background-color: #08590c;
+  background-image: -webkit-gradient(linear, 100% 100%, 0% 100%, from(#08590C), to(#08590C), color-stop(.5,#4C9E51));
+  background-image: -moz-linear-gradient(linear, 100% 100%, 0% 100%, from(#08590C), to(#08590C), color-stop(.5,#4C9E51); /* For old Fx (3.6 to 15) */
+  background-image: -ms-linear-gradient(linear, 100% 100%, 0% 100%, from(#08590C), to(#08590C), color-stop(.5,#4C9E51)); /* For pre-releases of IE 10*/
+  background-image: -o-linear-gradient(linear, 100% 100%, 0% 100%, from(#08590C), to(#08590C), color-stop(.5,#4C9E51)); /* For old Opera (11.1 to 12.0) */
+  background-image: inear-gradient(linear, 100% 100%, 0% 100%, from(#08590C), to(#08590C), color-stop(.5,#4C9E51)); /* Standard syntax; must be last */
+}
