--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,22 @@
     <h1>Blackjack</h1>
   </div>
 </div>
+
 <div class="row cardTable">
   <div class="large-12 columns">
+  </div>
+</div>
 
+ <div class="row">
+  <div class="columns large-4">
+    <div class="stats">
+      <h3>Game Stats</h3>
+    </div>
+  </div>
+  <div class="columns large-4"></div>
+  <div class="columns large-4">
+        <a href="#" class="button">Deal</a>
+        <a href="#" class="button">Hit</a>
+        <a href="#" class="button">Stand</a>
   </div>
 </div>
