--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,12 +4,32 @@
   </div>
 </div>
 
+<!-- card table and cards -->
 <div class="row cardTable">
   <div class="large-12 columns">
   </div>
 </div>
 
- <div class="row">
+<div class="cards">
+  <div class="dealer_card_group">
+    <!-- dealer cards -->
+    <div class="dealer_cards"></div>
+    <div class="dealer_cards"></div>
+    <div class="dealer_cards"></div>
+
+  </div>
+
+  <div class="player_card_group">
+    <!-- player cards -->
+    <div class="player_cards"></div>
+    <div class="player_cards"></div>
+    <div class="player_cards"></div>
+    <div class="player_cards"></div>
+  </div>
+</div>
+
+<!-- Game related actions and info -->
+<div class="row">
   <div class="columns large-4">
     <div class="stats">
       <h3>Game Stats</h3>
