--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -35,7 +35,7 @@
 // $total-columns: 12;
 
 // We use these to control various global styles
- $body-bg: #fff;
+ $body-bg: url(bgimage.jpg);
  $body-font-color: #222;
  $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
  $body-font-weight: normal;
