added js to display the game stats

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -30,9 +30,12 @@
   <!-- Game related actions and info -->
   <div class="row">
     <div class="columns large-4">
-      <div class="stats">
+      <div class="game_stats">
         <h3>Game Stats</h3>
       </div>
+      <div id="win_stats"></div>
+      <div id="lost_stats"></div>
+      <div id="draw_stats"></div>
     </div>
 
     <div class="columns large-4"></div>
