--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -32,10 +32,31 @@
     <div class="columns large-4">
       <div class="game_stats">
         <h3>Game Stats</h3>
+
+        <div class="row">
+          <div class="columns small-4">
+            <h5>WIN</h5>
+          </div>
+          <div class="columns small-4">
+            <h5>LOST</h5>
+          </div>
+          <div class="columns small-4">
+            <h5>DRAW</h5>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="columns small-4">
+            <div id="win_stats"></div>
+          </div>
+          <div class="columns small-4">
+            <div id="lost_stats"></div>
+          </div>
+          <div class="columns small-4">
+            <div id="draw_stats"></div>
+          </div>
+        </div>
       </div>
-      <div id="win_stats"></div>
-      <div id="lost_stats"></div>
-      <div id="draw_stats"></div>
     </div>
 
     <div class="columns large-4"></div>
