styling of stats

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -92,6 +92,12 @@ a {
   text-align: center;
 }
 
+#win_stats,
+#lost_stats,
+#draw_stats {
+  margin-bottom: 1em;
+}
+
 .action {
   margin: .1em;
 }
