--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,10 +1,10 @@
 <div id="blackjack" data-status="<%= status_game_path(@game) %>">
   <div class="row header">
-    <div class="large-11 columns">
+    <div class="large-10 columns">
       <h1>Blackjack</h1>
     </div>
-    <div class="large-1 columns">
-      <%= link_to 'Home', :back %>
+    <div class="large-2 columns exit">
+      <%= link_to 'Exit Game', :back %>
     </div>
   </div>
 
